# updown-backend

./: .env.example  .gitignore  COWORK.md  package-lock.json  package.json
.github/workflows/: main-branch.yml
docs/: api.md  operations.md
docs/bots/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: taker_stub.py
sdk/python/src/updown_sdk/: __init__.py  client.py  ws.py
sdk/python/src/updown_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/typescript/: package-lock.json  package.json  tsconfig.json
src/: config.ts  db.ts  index.ts
src/abis/: AutoCycler.json  ERC20.json  TradePool.json  UpDownSettlement.json
src/engine/: MatchingEngine.test.ts  MatchingEngine.ts  OrderBook.test.ts  OrderBook.ts  types.ts
src/lib/: feeEstimate.ts  marketKey.test.ts  marketKey.ts  marketResponse.ts  pairs.ts
src/middleware/: orderRateLimit.test.ts  orderRateLimit.ts  rateLimit.ts
src/models/: Balance.ts  ClaimPayoutLog.ts  Market.ts  Order.ts  ProcessedDepositTx.ts  SmartAccount.ts  Trade.ts
src/routes/: balance.ts  config.ts  dmm.ts  markets.ts  orderbook.ts  orders.ts  positions.ts  prices.ts  smartAccount.test.ts  smartAccount.ts  stats.ts  trades.ts
src/scripts/: migrate-smart-accounts-to-scoped.ts
src/services/: ClaimService.test.ts  ClaimService.ts  DMMService.test.ts  DMMService.ts  DepositService.test.ts  DepositService.ts  MarketSyncer.test.ts  MarketSyncer.ts  SettlementService.test.ts  SettlementService.ts  SignatureService.ts  SmartAccountBalanceSync.ts  SmartAccountExecutor.test.ts  (+1 more)
(+6 files in other folders)
